# vlm_gs_grasp

./: README.md
Ai_FPV/: NeedleDetection.py  SimpleGrasp.py
Ai_FPV/ArmIK/: __init__.py
Ai_FPV/HiwonderSDK/: __init__.py
Sensor/: AIColorsorting.py  ColorDiscrimination.py  ColorSensorControl.py  ColorSensorDemo.py  DigitalDisplay.py  FanControDemo.py  InfraredSensorControl.py  InfraredSensorDemo.py  LatticeDisplayArm.py  LatticeDisplayDemo.py  PhotoSensitiveControl.py  PhotoSensorDemo.py  ShapeRecognition.py  SonarRGBDemo.py  TouchSensorDemo.py  UltrasonicRangingDemo.py  UltrasonicSensorControl.py  Ultrasonic_radar.py  face_fan.py  fill_light.py
armpi_fpv/: .run_gs_grasp_robot.sh.swp  run_display.sh  run_gazebo_sim.sh  run_gs_grasp_robot.sh  run_moveit_demo.sh  run_moveit_sim.sh  run_robot.sh  setup_ros_env.sh  setup_ros_robot.sh
armpi_fpv/devel/: .catkin  _setup_util.py  setup.fish
armpi_fpv/install/: local_setup.fish  setup.fish  setup.sh
armpi_fpv/src/armpi_fpv_moveit_config/: CMakeLists.txt
armpi_fpv/src/armpi_fpv_moveit_config/config/: ros_controllers.yaml
armpi_fpv/src/armpi_fpv_moveit_config/launch/: demo.launch  demo_with_pointcloud.launch  gazebo.launch  gs_grasp_robot.launch  gs_grasp_sim.launch  pointcloud_grasp.launch  ros_controllers.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
armpi_fpv/src/armpi_fpv_moveit_config/scripts/: fake_point_cloud.py  gs_grasp_sim.py  pointcloud_grasp.py  vlm_client.py
armpi_fpv_demo/BusServo/: BusServo_Move.py  BusServo_ReadStatus.py  BusServo_Speed.py
lab_config/: main.sh
(+151 files in other folders)
